@@ -1,27 +1,20 @@
 package edu.hm.hafner.grading;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 
-import edu.hm.hafner.analysis.FileReaderFactory;
-import edu.hm.hafner.analysis.Report;
-import edu.hm.hafner.analysis.Report.IssueFilterBuilder;
-import edu.hm.hafner.analysis.Severity;
-import edu.hm.hafner.analysis.registry.ParserDescriptor;
-import edu.hm.hafner.grading.AnalysisToolsConfiguration.ToolConfiguration;
+import edu.hm.hafner.analysis.ParsingException;
 import edu.hm.hafner.grading.github.GitHubPullRequestWriter;
 import edu.hm.hafner.util.FilteredLog;
-
-import de.tobiasmichael.me.Util.JacocoParser;
-import de.tobiasmichael.me.Util.JacocoReport;
+import edu.hm.hafner.util.SecureXmlParserFactory;
+import edu.hm.hafner.util.VisibleForTesting;
 
 /**
  * GitHub action entrypoint for the autograding action.
@@ -31,167 +24,97 @@ import de.tobiasmichael.me.Util.JacocoReport;
  */
 @SuppressWarnings("checkstyle:ClassDataAbstractionCoupling")
 public class AutoGradingAction {
-    private static final String JACOCO_RESULTS = "target/site/jacoco/jacoco.xml";
-    private static final String CHECKSTYLE = "checkstyle";
-    private static final String PMD = "pmd";
-    private static final String SPOTBUGS = "spotbugs";
-
     /**
      * Public entry point, calls the action.
      *
      * @param args
      *         not used
      */
-    public static void main(final String[] args) {
+    public static void main(final String... args) {
         new AutoGradingAction().run();
     }
 
     void run() {
-        String jsonConfiguration = getConfiguration();
-        FilteredLog log = new FilteredLog("Autograding Action Errors:");
-
-        AggregatedScore score = new AggregatedScore(jsonConfiguration, log);
-
-        JacksonFacade jackson = new JacksonFacade();
+        FilteredLog log = new FilteredLog("Autograding GitHub Action Errors:");
+        var logHandler = new LogHandler(System.out, log);
 
         System.out.println("------------------------------------------------------------------");
-        System.out.println("------------------------ Configuration ---------------------------");
+        System.out.println("------------------------ Start Grading ---------------------------");
         System.out.println("------------------------------------------------------------------");
-        System.out.println("-> Test Configuration: " + jackson.toJson(score.getTestConfiguration()));
-        System.out.println("-> Code Coverage Configuration: " + jackson.toJson(score.getCoverageConfiguration()));
-        System.out.println("-> PIT Mutation Coverage Configuration: " + jackson.toJson(score.getPitConfiguration()));
-        System.out.println("-> Static Analysis Configuration: " + jackson.toJson(score.getAnalysisConfiguration()));
 
-        GradingConfiguration configuration = new GradingConfiguration(jsonConfiguration);
-
-        System.out.println("==================================================================");
-        List<Report> testReports = new TestReportFinder().find(configuration.getTestPattern());
-        score.addTestScores(new TestReportSupplier(testReports));
-        System.out.println("==================================================================");
-        List<Report> pitReports = new PitReportFinder().find();
-        score.addPitScores(new PitReportSupplier(pitReports));
-        System.out.println("==================================================================");
-        if (Files.isReadable(Paths.get(JACOCO_RESULTS))) {
-            JacocoReport coverageReport = new JacocoParser().parse(new FileReaderFactory(Paths.get(JACOCO_RESULTS)));
-            score.addCoverageScores(new CoverageReportSupplier(coverageReport));
-            System.out.println("Reading JaCoCo results:");
-            System.out.format("- %s%n", JACOCO_RESULTS);
-        }
-        else {
-            System.out.println("No JaCoCo coverage result files found!");
-        }
-
-        System.out.println("==================================================================");
-        List<Report> analysisReports = new ArrayList<>();
-
-        if (score.getAnalysisConfiguration().isEnabled()) {
-            AnalysisToolsConfiguration toolsConfiguration = new AnalysisToolsConfiguration();
-            ToolConfiguration[] tools = toolsConfiguration.getTools(jsonConfiguration);
-            if (tools.length == 0) { // TODO: remove if all assignments use the new version
-                tools = new ToolConfiguration[] {
-                        new ToolConfiguration(CHECKSTYLE),
-                        new ToolConfiguration(PMD),
-                        new ToolConfiguration(SPOTBUGS)
-                };
-            }
-
-            List<AnalysisScore> analysisScores = new ArrayList<>();
-            ReportFinder reportFinder = new ReportFinder();
-            for (ToolConfiguration tool : tools) {
-                ParserDescriptor parser = tool.getDescriptor();
-                System.out.format("Searching for '%s' results matching file name pattern %s%n",
-                        parser.getName(), tool.getPattern());
-                List<Path> files = reportFinder.find("./", "glob:" + tool.getPattern());
-
-                if (files.size() == 0) {
-                    System.out.println("No matching report result files found!");
-                }
-                else {
-                    Collections.sort(files);
-
-                    for (Path file : files) {
-                        Report allIssues = parser.createParser().parse(new FileReaderFactory(file));
-                        Report filteredIssues = filterAnalysisReport(allIssues, configuration);
-                        System.out.format("- %s : %d warnings (from total %d)%n", file, filteredIssues.size(),
-                                allIssues.size());
-                        analysisReports.add(filteredIssues);
-                        analysisScores.add(createAnalysisScore(score.getAnalysisConfiguration(), parser.getName(),
-                                parser.getId(), filteredIssues));
-                    }
-                }
-            }
-            score.addAnalysisScores(new AnalysisReportSupplier(analysisScores));
-            System.out.println("==================================================================");
-        }
-
-        log.getInfoMessages().forEach(System.out::println);
+        AggregatedScore score = new AggregatedScore(getConfiguration(), log);
+        logHandler.print();
 
         System.out.println("==================================================================");
 
-        GradingReport results = new GradingReport();
         GitHubPullRequestWriter pullRequestWriter = new GitHubPullRequestWriter();
 
-        String files = createAffectedFiles(configuration);
+        try {
+            score.gradeTests(new ConsoleTestReportFactory());
+            logHandler.print();
 
-        pullRequestWriter.addComment(getChecksName(), results.getHeader(), results.getSummary(score) + files,
-                results.getDetails(score, testReports), analysisReports);
-    }
+            System.out.println("==================================================================");
 
-    private String createAffectedFiles(final GradingConfiguration configuration) {
-        String analysisPattern = configuration.getAnalysisPattern();
-        if (StringUtils.isNotBlank(analysisPattern) && !StringUtils.equals(analysisPattern,
-                GradingConfiguration.INCLUDE_ALL_FILES)) {
-            return "\n" + new ReportFinder().renderLinks("./", "regex:" + analysisPattern);
+            score.gradeCoverage(new ConsoleCoverageReportFactory());
+            logHandler.print();
+
+            System.out.println("==================================================================");
+
+            score.gradeAnalysis(new ConsoleAnalysisReportFactory());
+            logHandler.print();
+
+            System.out.println("==================================================================");
+
+            GradingReport results = new GradingReport();
+
+            System.out.println(results.getSummary(score));
+
+            pullRequestWriter.addComment(getChecksName(), score,
+                    results.getHeader(), results.getSummary(score),
+                    results.getDetails(score, List.of()));
         }
-        return StringUtils.EMPTY;
-    }
+        catch (NoSuchElementException | ParsingException | SecureXmlParserFactory.ParsingException exception) {
+            System.out.println("==================================================================");
+            System.out.println(ExceptionUtils.getStackTrace(exception));
 
-    Report filterAnalysisReport(final Report report, final GradingConfiguration configuration) {
-        IssueFilterBuilder builder = new IssueFilterBuilder();
-        builder.setIncludeFileNameFilter(configuration.getAnalysisPattern());
-        if (configuration.hasTypeIgnores()) {
-            builder.setExcludeTypeFilter(configuration.getTypesIgnorePattern());
+            GradingReport results = new GradingReport();
+            pullRequestWriter.addComment(getChecksName(), score,
+                    results.getHeader(), results.getSummary(score),
+                    results.getErrors(score, exception));
+
         }
-        return report.filter(builder.build());
-    }
 
-    private static AnalysisScore createAnalysisScore(final AnalysisConfiguration configuration,
-            final String displayName,
-            final String id, final Report report) {
-        return new AnalysisScore.AnalysisScoreBuilder()
-                .withConfiguration(configuration)
-                .withDisplayName(displayName)
-                .withId(id)
-                .withTotalErrorsSize(report.getSizeOf(Severity.ERROR))
-                .withTotalHighSeveritySize(report.getSizeOf(Severity.WARNING_HIGH))
-                .withTotalNormalSeveritySize(report.getSizeOf(Severity.WARNING_NORMAL))
-                .withTotalLowSeveritySize(report.getSizeOf(Severity.WARNING_LOW))
-                .build();
+        System.out.println("------------------------------------------------------------------");
+        System.out.println("------------------------- End Grading ----------------------------");
+        System.out.println("------------------------------------------------------------------");
     }
 
     private String getChecksName() {
         return StringUtils.defaultIfBlank(System.getenv("CHECKS_NAME"), "Autograding results");
     }
 
-    private String getConfiguration() {
+    @VisibleForTesting
+    String getConfiguration() {
         String configuration = System.getenv("CONFIG");
         if (StringUtils.isBlank(configuration)) {
-            System.out.println("No configuration provided (environment CONFIG not set), using default configuration");
+            System.out.println("No configuration provided (environment variable CONFIG not set), using default configuration");
 
             return readDefaultConfiguration();
         }
 
-        System.out.println("Using configuration: " + configuration);
+        System.out.println("Obtaining configuration from environment variable CONFIG");
         return configuration;
     }
 
     private String readDefaultConfiguration() {
         try {
-            byte[] encoded = Files.readAllBytes(Paths.get("/default.conf"));
-
-            return new String(encoded, StandardCharsets.UTF_8);
+            var defaultConfig = getClass().getResource("/default-config.json");
+            if (defaultConfig == null) {
+                throw new IOException("Can't find configuration in class path: default-conf.json");
+            }
+            return Files.readString(Paths.get(defaultConfig.toURI()));
         }
-        catch (IOException exception) {
+        catch (IOException | URISyntaxException exception) {
             System.out.println("Can't read configuration: default.conf");
             return StringUtils.EMPTY;
         }
